Add SQLite scaffold and empty Users table

--- a/AcsEmulator/AcsEmulatorAPI/appsettings.json
+++ b/AcsEmulator/AcsEmulatorAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "EmulatorDb": "Data Source=AcsEmulator.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
