--- a/AcsEmulator/AcsEmulatorAPI/Properties/launchSettings.json
+++ b/AcsEmulator/AcsEmulatorAPI/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7146;http://localhost:5146",
+      "applicationUrl": "http://localhost:7146",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
