change to port 80 and fix service responses

--- a/TestClients/js/identity/.env
+++ b/TestClients/js/identity/.env
@@ -1,1 +1,1 @@
-COMMUNICATION_CONNECTION_STRING="endpoint=http://localhost:7146/;accessKey=pw=="
+COMMUNICATION_CONNECTION_STRING="endpoint=http://localhost/;accessKey=pw=="
