generate jwt token

--- a/AcsEmulator/AcsEmulatorAPI/appsettings.json
+++ b/AcsEmulator/AcsEmulatorAPI/appsettings.json
@@ -2,6 +2,8 @@
   "ConnectionStrings": {
     "EmulatorDb": "Data Source=AcsEmulator.db"
   },
+  "JwtSigningKey": "5fca297d-3350-45ad-a513-44a9d7d8fbfc",
+  "ResourceId": "d9b2f18a-2c34-415e-889d-c210cb738186",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
