Enable https workarounds.
Use https as default connection string. Disable cert verification
in node - we're hacking!

--- a/TestClients/js/identity/.env
+++ b/TestClients/js/identity/.env
@@ -1,1 +1,2 @@
-COMMUNICATION_CONNECTION_STRING="endpoint=http://localhost/;accessKey=pw=="
+COMMUNICATION_CONNECTION_STRING="endpoint=https://localhost/;accessKey=pw=="
+NODE_TLS_REJECT_UNAUTHORIZED="0"
