first naive way to use token in chat api

--- a/TestClients/js/chat/.env
+++ b/TestClients/js/chat/.env
@@ -1,2 +1,2 @@
-COMMUNICATION_CONNECTION_STRING="endpoint=https://localhost/;accessKey=<key>"
-COMMUNICATION_ENDPOINT="https://localhost"
+COMMUNICATION_CONNECTION_STRING="endpoint=https://localhost/;accessKey=pw=="
+NODE_TLS_REJECT_UNAUTHORIZED="0"
