--- a/AcsEmulator/acs-emulator-ui/package.json
+++ b/AcsEmulator/acs-emulator-ui/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
