Add identities page

--- a/AcsEmulator/acs-emulator-ui/package.json
+++ b/AcsEmulator/acs-emulator-ui/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@azure/communication-common": "^2.1.0",
     "@fluentui/react": "^8.96.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.5",
@@ -41,5 +42,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "https://localhost"
 }
