--- a/AcsEmulator/AcsEmulatorAPI/appsettings.json
+++ b/AcsEmulator/AcsEmulatorAPI/appsettings.json
@@ -10,5 +10,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Kestrel": {
+    "Endpoints": {
+      "HttpsInlineCertFile": {
+        "Url": "https://localhost",
+        "Certificate": {
+          "Path": "trouter_selfSigned.pfx",
+          "Password": "mypassword"
+        }
+      }
+    }
+  },
   "AllowedHosts": "*"
 }
