--- a/TestClients/js/sms/package.json
+++ b/TestClients/js/sms/package.json
@@ -29,14 +29,16 @@
   },
   "homepage": "https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/communication/communication-sms",
   "dependencies": {
-    "@azure/communication-sms": "latest",
-    "dotenv": "latest",
     "@azure/communication-common": "^2.1.0",
+    "@azure/communication-sms": "latest",
     "@azure/core-rest-pipeline": "^1.8.0",
-    "@azure/identity": "^2.0.1"
+    "@azure/identity": "^2.0.1",
+    "dotenv": "latest",
+    "express": "^4.18.2"
   },
   "devDependencies": {
-    "typescript": "~4.8.0",
-    "rimraf": "latest"
+    "@types/express": "^4.17.17",
+    "rimraf": "latest",
+    "typescript": "~4.8.0"
   }
 }
