bundle web ui. Serving prod build still has issues

--- a/AcsEmulator/AcsEmulatorCLI/AcsEmulatorCLI.csproj
+++ b/AcsEmulator/AcsEmulatorCLI/AcsEmulatorCLI.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\AcsEmulatorAPI\AcsEmulatorAPI.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="..\acs-emulator-ui\build\**\*.*" CopyToOutputDirectory="Always"></None>
+  </ItemGroup>
+
 </Project>
