--- a/AcsEmulator/acs-emulator-ui/package.json
+++ b/AcsEmulator/acs-emulator-ui/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@azure/communication-chat": "^1.4.0",
     "@azure/communication-common": "^2.3.1",
+    "@azure/communication-react": "^1.13.0",
     "@fluentui/react": "^8.115.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^12.1.5",
