--- a/AcsEmulator/AcsEmulatorCLI/AcsEmulatorCLI.csproj
+++ b/AcsEmulator/AcsEmulatorCLI/AcsEmulatorCLI.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Condition="Exists('..\AcsEmulatorAPI\trouter_selfSigned.pfx')" Include="..\AcsEmulatorAPI\trouter_selfSigned.pfx" CopyToOutputDirectory="Always"></None>
+    <None Include="..\AcsEmulatorAPI\acsEmulator_selfSigned.pfx" CopyToOutputDirectory="Always"></None>
   </ItemGroup>
 
 </Project>
