--- a/AcsEmulator/AcsEmulatorAPI/appsettings.json
+++ b/AcsEmulator/AcsEmulatorAPI/appsettings.json
@@ -4,7 +4,7 @@
   },
   "JwtSigningKey": "5fca297d-3350-45ad-a513-44a9d7d8fbfc",
   "ResourceId": "d9b2f18a-2c34-415e-889d-c210cb738186",
-  "EventGridSimulatorSystemTopicHostname": "localhost:60101",
+  "EventGridSimulatorSystemTopicHostname": "https://localhost:60101/api/events",
   "EventGridSimulatorSystemTopicCredentials": "TheLocal+DevelopmentKey=",
   "Logging": {
     "LogLevel": {
