Add OpenTelemetry logging with optional endpoint

--- a/AcsEmulator/AcsEmulatorAPI/appsettings.json
+++ b/AcsEmulator/AcsEmulatorAPI/appsettings.json
@@ -6,10 +6,11 @@
   "ResourceId": "d9b2f18a-2c34-415e-889d-c210cb738186",
   "EventGridSimulatorSystemTopicHostname": "https://localhost:60101/api/events",
   "EventGridSimulatorSystemTopicCredentials": "TheLocal+DevelopmentKey=",
+  "OpenTelemetryEndpointUrl": null,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information"
     }
   },
   "AllowedHosts": "*"
