hook up POST callConnections to websocket and display incoming call screen

--- a/AcsEmulator/.gitignore
+++ b/AcsEmulator/.gitignore
@@ -455,3 +455,6 @@ $RECYCLE.BIN/
 
 # Our SQLite db
 AcsEmulator.db*
+
+# Self-signed certificate, please use the script to generate your own
+*.pfx
