--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -7,19 +7,32 @@ on:
       # todo: get nupkgVersion dynamically
       nupkgVersion:
         description: "Example: 0.1.0-alpha.20230510.1"
+        required: true
+      isPreRelease:
+        description: "Indicator of whether or not is a prerelease"
+        required: true
+        type: choice
+        options:
+          - true
+          - false
 
 jobs:
   publish:
     runs-on: windows-latest
     name: Create Release
     steps:
-      - name: Use Node.js v20.11.x
-        uses: actions/setup-node@v3
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: 8.0.x
+
+      - name: Use Node.js v20
+        uses: actions/setup-node@v4
         with:
-          node-version: "20.11.x"
+          node-version: 20
 
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
@@ -27,6 +40,54 @@ jobs:
         working-directory: ./AcsEmulator/acs-emulator-ui
         run: npm install
 
-      - name: Build project
+      - name: Build UI Project
         working-directory: ./AcsEmulator/acs-emulator-ui
         run: npm run build
+      
+      - name: Build CLI project
+        working-directory: ./AcsEmulator
+        run: dotnet build AcsEmulatorCLI --configuration Release --property:Version=${{ github.event.inputs.nupkgVersion }}
+      
+      - name: Create Release
+        uses: softprops/action-gh-release@v2
+        with:
+          name: AcsEmulatorCLI ${{ github.event.inputs.nupkgVersion }}
+          prerelease: ${{ github.event.inputs.isPreRelease }}
+          tag_name: v${{ github.event.inputs.nupkgVersion }}
+          token: ${{ secrets.CUSTOM_GITHUB_TOKEN }}
+          files: |
+            ./AcsEmulator/AcsEmulatorCLI/nupkg/AcsEmulatorCLI.${{ github.event.inputs.nupkgVersion }}.nupkg
+          body: "
+            # Emulator for Azure Communication Services
+            Local emulator to run Azure Communication Services client SDKs without having to provision an Azure Communication Services resource.
+
+            ## Download the emulator CLI tool
+
+            ### Install from GitHub
+
+            Make sure you have the .NET Core SDK installed, download the latest [AcsEmulatorCLI Release](https://github.com/DominikMe/acs-emulator/releases) and then run from a terminal:
+
+            ```dotnetcli
+            dotnet tool install -g --add-source [downloadFolder] AcsEmulatorCLI --version ${{ github.event.inputs.nupkgVersion }}
+            ```
+
+            ### Running the tool
+
+            **Usage:**
+
+            `acs-emulator [command] [options]`
+
+            **Commands:**
+
+            | Command            | Description                      |
+            | ------------------ | -------------------------------- |
+            |  `--version `        | Show version information
+            |  `-?, -h, --help`    | Show help and usage information |
+            |  `run`               | Run the emulator. |
+            |  `openApi`           | Open the emulator's API in Swagger UI. |
+            |  `openDB`            | Open the emulator's sqlite database.         |
+            |  `openUI`            | Open the emulator UI. |
+            |  `clean`             | Clean all data and reset the emulator state. |
+            |  `connectionString`  | Get the ACS connection string for the emulator. |
+            |  `repo`              | Open code repository. |
+          "
